--- a/interface/index.html
+++ b/interface/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <title>Rastreamento GPS</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=SUA_CHAVE_GMAPS"></script>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; }
+        #map { height: 400px; width: 100%; margin-top: 20px; }
+        .info { margin-top: 10px; font-size: 18px; }
+    </style>
+</head>
+<body>
+
+    <h2>Localização do Tênis com GPS</h2>
+    <div class="info">
+        <p><b>Latitude:</b> <span id="latitude">Carregando...</span></p>
+        <p><b>Longitude:</b> <span id="longitude">Carregando...</span></p>
+    </div>
+    <div id="map"></div>
+
+    <script>
+        let map, marker;
+
+        function initMap(lat, lng) {
+            const pos = { lat, lng };
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: pos,
+                zoom: 16
+            });
+            marker = new google.maps.Marker({ position: pos, map: map });
+        }
+
+        function updateMap(lat, lng) {
+            const pos = { lat, lng };
+            marker.setPosition(pos);
+            map.setCenter(pos);
+        }
+
+        function fetchGPSData() {
+            fetch("/gps") // Endpoint que retorna os dados do GPS
+                .then(response => response.json())
+                .then(data => {
+                    const lat = parseFloat(data.latitude);
+                    const lng = parseFloat(data.longitude);
+                    
+                    document.getElementById("latitude").textContent = lat;
+                    document.getElementById("longitude").textContent = lng;
+
+                    if (!map) {
+                        initMap(lat, lng);
+                    } else {
+                        updateMap(lat, lng);
+                    }
+                })
+                .catch(error => console.error("Erro ao buscar GPS:", error));
+        }
+
+        setInterval(fetchGPSData, 5000); // Atualiza a cada 5 segundos
+    </script>
+
+</body>
+</html>
 
