--- a/interface/index.html
+++ b/interface/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h1>SEVEN'TEC</h1>
-        <img src="https://ibb.co/3YYP2ZDJ" alt="Logo SEVEN'TEC">
+        <img src="https://i.ibb.co/NnnG5B84/IMG-20250227-WA0206.jpg" alt="Logo SEVEN'TEC">
     </div>
     <div class="content">
         <h2>Avisos</h2>
